--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_settings">Settings</string>
+    <string name="erase_all">Erase all notes</string>
+    <string name="cancel">No</string>
+    <string name="yes">Yes</string>
+    <string name="confirmation_text">Are you sure?</string>
 </resources>
